# hse-habr2024

./: .gitignore  EDA.ipynb  EDA.md  Makefile  README.md  checkout.md  checkpoints.md  dataset.md  eda.ipynb  habr_parser.ipynb  habr_parser.py  mentor_view.md  pyproject.toml  report.md  streamlit_app.py  tags-multilabel-classifier.ipynb  utils.py
DL/: README.md  dl.ipynb  dl_bert.ipynb  metrics.md  ml_utils.py
EDA/: EDA.md  dataset.md  tokens_light.md
ML_baseline/: ML_baseline.ipynb  ML_baseline.md  ML_baseline_conclusions.md  baseline.md  best_pipeline.ipynb  data_baseline.md  ml_baseline_vit.ipynb  ml_utils.py  prepare_tags.ipynb
ML_baseline/Nonlienar_models/: best_params_knn.pkl  best_params_r_dtc.pkl  best_params_r_knn.pkl  best_params_r_rfc.pkl  best_params_rfc.pkl  nonlinear_models_exploring.ipynb
ML_baseline/Nonlienar_models/catboost_info/: catboost_training.json
ML_baseline/best_params/: best_params_h.pkl  best_params_r.pkl  pipeline_r.pkl  readme.md
ML_baseline_upgrade/: ML_baseline_upgrade.ipynb  ML_baseline_upgrade_final.ipynb  README.md  ml_utils.py
ML_baseline_upgrade/best_params/: README.md  best_params_h.pkl  best_params_r.pkl
MVP/: api_mvp.py  docker-compose.yml  main_mvp.py  ml_utils.py  report.md  sample_data.md  streamlit_mvp.py
MVP/fastapi/: Dockerfile  api_mvp.py  ml_utils.py  pipelines.md  requirements.txt
MVP/streamlit/: Dockerfile  requirements.txt  streamlit_mvp.py
Parser/: habr_parser.py  utils.py
fastapi/: api_mvp.py  main_mvp.py  ml_utils.py
mock_backend/: mock_backend.py
streamlit_app/: app.py
